<resources>
    <string name="app_name">作業9:黃俊維</string>

    <string name="backgroundMusic">背景音樂</string>
    <string name="playBackgroundMusic">播放背景音樂</string>
    <string name="stopBackgroundMusic">停止播放背景音樂</string>
    <string name="about">關於這個程式</string>
    <string name="exit">結束</string>

    <string name="item">項目:</string>

    <string-array name="mealList">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string name="date">日期:</string>
    <string name="price">金額:</string>

    <string name="enter">輸入</string>
    <string name="record">紀錄</string>
</resources>
