<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/backgroundMusic"
        android:icon="@android:drawable/ic_media_ff">
        <menu>
            <item android:id="@+id/menuItemPlayBackgroundMusic"
                android:title="@string/playBackgroundMusic" />
            <item android:id="@+id/menuItemStopBackgroundMusic"
                android:title="@string/stopBackgroundMusic" />
        </menu>
    </item>
    <item android:id="@+id/menuItemAbout"
        android:title="@string/about"
        android:icon="@android:drawable/ic_dialog_info" />
    <item android:id="@+id/menuItemExit"
        android:title="@string/exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel" />
</menu>